		exist and runs "select version()" if PQparameterStatus doesn't
		exist; to get the db version
	added mysql-5.1 drop-in replacement lib
	fixed a bug that caused result set data not to be cleaned up before
		a cursor is reused as a bind cursor
	changed string bind length to uint32_t from uint16_t
	added clearBinds() call after executeQuery() in perl dbi driver
	began work on an ODBC driver

0.39 - removed oracle7 support
	added OCI_OBJECT to oracle environment init
	added some more error codes to oracle's dead connection test
	connections don't decrement connection count when they fail to log in
		now :)
	added -silent option to connections that scaler uses so they don't
		spew login errors if the db is down
	fixed a bug that disabled scaling if maxlisteners
		was -1 (the default, which means no maximum)
	freetds, db2 connection don't detach before logging in any more
	added reloginatstart config parameter
	fixed sendLob for oracle<8i
	applied Johnny Luong's postgresql drop-in lib patch
	applied Jason McClellen's perl dbi raise-error patch
	sybase/freetds use CS_SEVERITY instead of msgp->severity now
	added 64 bit sybase tests
	postgresql only uses PQexecPrepared if PQprepare also exists
	set LANG=POSIX before running ruby/make so sed's would work on non-us
		locales
	documented how to use mysql stored procedure output parameters
	applied james@thoughtpatterns.com's perl null bind patch
	applied Tim Bunce's perl dbi driver patch
	suppress error message of cat $ORACLE_HOME/lib/sysliblist in configure
		script
	added support for stored procedures which return result sets to sybase
		connection
	added support for stored procedures which return result sets to freetds
		connection but it doesn't actually return anything
	documented how to use sybase stored procedure result sets
	fixed a bug that caused zope to get an exception when result sets are
		empty
	configure looks for instantclient if it can't find anything in