@@ -87,3 +87,4 @@ Fixes/Patches incorporated from:
 	Ragnar Rova
 	Yeb Havinga
 	Jesse Wagner
+	Paul Maddox
