@@ -20,6 +20,7 @@
 	changed string bind length to uint32_t from uint16_t
 	added clearBinds() call after executeQuery() in perl dbi driver
 	began work on an ODBC driver
+	added serverVersion and clientVersion methods
 
 0.39 - removed oracle7 support
 	added OCI_OBJECT to oracle environment init
